--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1575,9 +1575,9 @@
   "pli-tv-kd13:31.3.84": "He then disrobes. Being re-ordained and having become sure of all the offenses, he conceals those offenses he previously was sure of, ",
   "pli-tv-kd13:31.3.85": "but not those he was unsure of. ",
   "pli-tv-kd13:31.3.86": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:31.3.87": "He is then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
+  "pli-tv-kd13:31.3.87": "He’s then to be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offenses. ",
   "pli-tv-kd13:31.3.88": "It may be that a monk on probation commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:31.3.89": "He is sure of some of the offenses, but unsure of others. ",
+  "pli-tv-kd13:31.3.89": "He’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:31.3.90": "He conceals the offenses he is sure of, ",
   "pli-tv-kd13:31.3.91": "but not those he is unsure of. ",
   "pli-tv-kd13:31.3.92": "He then disrobes. Being re-ordained and having become sure of all the offenses, he conceals all of them. ",
