Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1591,7 +1591,7 @@
   "pli-tv-kd13:31.3.101": "(To be expanded as above.) ",
   "pli-tv-kd13:31.3.102": "he knows about some of the offenses, but not others … ",
   "pli-tv-kd13:31.3.103": "he remembers some of the offenses, but not others … ",
-  "pli-tv-kd13:31.3.104": "he is sure of some of the offenses, but unsure of others. ",
+  "pli-tv-kd13:31.3.104": "he’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:31.3.105": "He conceals the offenses he is sure of, ",
   "pli-tv-kd13:31.3.106": "but not those he is unsure of. ",
   "pli-tv-kd13:31.3.107": "He then becomes overwhelmed by pain. ",
