--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1593,7 +1593,7 @@
   "pli-tv-kd13:31.3.103": "he remembers some of the offenses, but not others … ",
   "pli-tv-kd13:31.3.104": "he’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:31.3.105": "He conceals the offenses he’s sure of, ",
-  "pli-tv-kd13:31.3.106": "but not those he is unsure of. ",
+  "pli-tv-kd13:31.3.106": "but not those he’s unsure of. ",
   "pli-tv-kd13:31.3.107": "He then becomes overwhelmed by pain. ",
   "pli-tv-kd13:31.3.108": "When he recovers and having become sure of all the offenses, he conceals none of them. … ",
   "pli-tv-kd13:31.3.110": "having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
