Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1614,8 +1614,8 @@
   "pli-tv-kd13:32.1.9": "both concealed and unconcealed … ",
   "pli-tv-kd13:32.1.10": "he knows about some of the offenses, but not others … ",
   "pli-tv-kd13:32.1.11": "he remembers some of the offenses, but not others … ",
-  "pli-tv-kd13:32.1.12": "he is sure of some of the offenses, but unsure of others. ",
-  "pli-tv-kd13:32.1.13": "He conceals the offenses he is sure of, ",
+  "pli-tv-kd13:32.1.12": "he’s sure of some of the offenses, but unsure of others. ",
+  "pli-tv-kd13:32.1.13": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:32.1.14": "but not those he is unsure of. ",
   "pli-tv-kd13:32.1.15": "He then becomes overwhelmed by pain. ",
   "pli-tv-kd13:32.1.16": "When he recovers and having become sure of all the offenses, he conceals none of them. … ",
