--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1616,7 +1616,7 @@
   "pli-tv-kd13:32.1.11": "he remembers some of the offenses, but not others … ",
   "pli-tv-kd13:32.1.12": "he’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:32.1.13": "He conceals the offenses he’s sure of, ",
-  "pli-tv-kd13:32.1.14": "but not those he is unsure of. ",
+  "pli-tv-kd13:32.1.14": "but not those he’s unsure of. ",
   "pli-tv-kd13:32.1.15": "He then becomes overwhelmed by pain. ",
   "pli-tv-kd13:32.1.16": "When he recovers and having become sure of all the offenses, he conceals none of them. … ",
   "pli-tv-kd13:32.1.18": "having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
