--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1686,7 +1686,7 @@
   "pli-tv-kd13:34.2.10": "They go, thinking, “We’ll inform.” ",
   "pli-tv-kd13:34.2.11": "On their way, one of them decides to conceal it, thinking, “I won’t inform.” ",
   "pli-tv-kd13:34.2.12": "He then conceals it during the first part of the night, during the second part of the night, and during the third part of the night. ",
-  "pli-tv-kd13:34.2.13": "If he is still concealing it at dawn, he has committed an offense ",
+  "pli-tv-kd13:34.2.13": "If he’s still concealing it at dawn, he has committed an offense ",
   "pli-tv-kd13:34.2.14": "and is to confess an offense of wrong conduct. ",
   "pli-tv-kd13:34.2.15": "He should be given probation according to the length of the concealment of that offense, and both should then be given the trial period of six days. ",
   "pli-tv-kd13:34.2.16": "Two monks have each committed an offense entailing suspension. ",
