--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1869,7 +1869,7 @@
   "pli-tv-kd13:36.3.8": "unconcealed and both specified and unspecified. ",
   "pli-tv-kd13:36.3.9": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.3.10": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
-  "pli-tv-kd13:36.3.11": "Thinking that he is on probation … ",
+  "pli-tv-kd13:36.3.11": "Thinking that he’s on probation … ",
   "pli-tv-kd13:36.3.12": "and the Sangha sends him back to the beginning for those offenses committed while on probation. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. It also gives him the trial period of six days legitimately, and it rehabilitates him legitimately. ",
   "pli-tv-kd13:36.3.13": "That monk is purified from those offenses. ",
   "pli-tv-kd13:36.4.1": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
