--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1893,7 +1893,7 @@
   "pli-tv-kd13:36.4.28": "While on probation, he commits a number of offenses entailing suspension—both concealed and unconcealed and both specified and unspecified. ",
   "pli-tv-kd13:36.4.29": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.4.30": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
-  "pli-tv-kd13:36.4.31": "Thinking that he is on probation, he commits a number of offenses entailing suspension—both concealed and unconcealed and both specified and unspecified. ",
+  "pli-tv-kd13:36.4.31": "Thinking that he’s on probation, he commits a number of offenses entailing suspension—both concealed and unconcealed and both specified and unspecified. ",
   "pli-tv-kd13:36.4.32": "At this point he remembers offenses committed while on probation for the former offenses, and he remembers offenses committed while on probation for the further offenses. ",
   "pli-tv-kd13:36.4.33": "He considers all this ",
   "pli-tv-kd13:36.4.43": "and thinks, ‘Let me ask the Sangha to send me back to the beginning for all those offenses committed while on probation. And the procedure should be legitimate, irreversible, and fit to stand; the simultaneous probation should be legitimate; the trial period of six days should be legitimate; and the rehabilitation should be legitimate.’ ",
