Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn22.82:0.1": "Verbundene Lehrreden 22.82 "
+  "sn22.82:0.1": "Verbundene Lehrreden 22.82 ",
+  "sn22.82:0.2": "8. Das Kapitel über Verzehren "
 }
