Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -691,6 +691,7 @@
   "sn-name:690.sn22.79": "Verzehren ",
   "sn-name:691.sn22.80": "Bettler ",
   "sn-name:692.sn22.81": "In Pārileyya ",
+  "sn-name:693.sn22.82": "Eine Vollmondnacht ",
   "sn-name:694.sn22-theravagga": "Das Kapitel mit Ordensältesten ",
   "sn-name:702.sn22.90": "Mit Channa ",
   "sn-name:705.sn22-pupphavagga": "Das Kapitel über Blumen ",
