--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.82:0.1": "Verbundene Lehrreden 22.82 ",
   "sn22.82:0.2": "8. Das Kapitel über Verzehren ",
   "sn22.82:0.3": "Eine Vollmondnacht ",
-  "sn22.82:1.1": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras, zusammen mit einem großen Saṅgha von Mönchen. "
+  "sn22.82:1.1": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras, zusammen mit einem großen Saṅgha von Mönchen. ",
+  "sn22.82:1.2": "Zu der Zeit, es war der Besinnungstag, der Vollmond am fünfzehnten Tag, saß der Buddha inmitten des Saṅgha der Mönche im Freien. "
 }
