Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.82:1.2": "Zu der Zeit, es war der Besinnungstag, der Vollmond am fünfzehnten Tag, saß der Buddha inmitten des Saṅgha der Mönche im Freien. ",
   "sn22.82:2.1": "Da erhob sich einer der Mönche von seinem Sitz, ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: ",
   "sn22.82:2.2": "„Herr, ich würde den Buddha gerne über einen bestimmten Punkt befragen, wenn du die Zeit nehmen wolltest, zu antworten.“ ",
-  "sn22.82:2.3": "„Nun, Mönch, nimm auf deinem Sitz Platz und frage, was du willst.“ "
+  "sn22.82:2.3": "„Nun, Mönch, nimm auf deinem Sitz Platz und frage, was du willst.“ ",
+  "sn22.82:2.4": "„Ja, Herr“, antwortete jener Mönch. Er setzte sich und sagte zum Buddha: "
 }
