--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.82:2.2": "„Herr, ich würde den Buddha gerne über einen bestimmten Punkt befragen, wenn du die Zeit nehmen wolltest, zu antworten.“ ",
   "sn22.82:2.3": "„Nun, Mönch, nimm auf deinem Sitz Platz und frage, was du willst.“ ",
   "sn22.82:2.4": "„Ja, Herr“, antwortete jener Mönch. Er setzte sich und sagte zum Buddha: ",
-  "sn22.82:2.5": "„Herr, gibt es die fünf mit Ergreifen verbundenen Aggregate: nämlich "
+  "sn22.82:2.5": "„Herr, gibt es die fünf mit Ergreifen verbundenen Aggregate: nämlich ",
+  "sn22.82:2.6": "Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein?“ "
 }
