Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.82:4.4": "„Weder das eine noch das andere. Vielmehr ist das Sehnen und Begehren nach ihnen das Ergreifen hier.“ ",
   "sn22.82:4.5": "Mit den Worten „gut, Herr“ begrüßte der Mönch die Worte des Buddha und stimmte ihm zu. Dann stellte er eine weitere Frage: ",
   "sn22.82:5.1": "„Aber Herr, kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben?“ ",
-  "sn22.82:5.3": "„Da denkt jemand: "
+  "sn22.82:5.3": "„Da denkt jemand: ",
+  "sn22.82:5.4": "‚Dass ich doch in der Zukunft solche Form, solches Gefühl, solche Wahrnehmung, solche Entscheidungen und solches Bewusstsein hätte!‘ "
 }
