--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn22.82:2.5": "„Herr, gibt es die fünf mit Ergreifen verbundenen Aggregate: nämlich ",
   "sn22.82:2.6": "Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein?“ ",
   "sn22.82:3.1": "„Ja, es gibt sie“, sagte der Buddha. ",
-  "sn22.82:3.3": "Mit den Worten „gut, Herr“ begrüßte der Mönch die Worte des Buddha und stimmte ihm zu. Dann stellte er eine weitere Frage: ",
+  "sn22.82:3.3": "Mit den Worten „gut, Herr“ begrüßte jener Mönch die Worte des Buddha und stimmte ihm zu. Dann stellte er eine weitere Frage: ",
   "sn22.82:4.1": "„Aber Herr, was ist die Wurzel dieser fünf mit Ergreifen verbundenen Aggregate?“ ",
   "sn22.82:4.2": "„Diese fünf mit Ergreifen verbundenen Aggregate wurzeln im Verlangen.“ … ",
   "sn22.82:4.3": "„Aber Herr, ist das Ergreifen genau dasselbe wie die fünf mit Ergreifen verbundenen Aggregate? Oder ist das Ergreifen ein Ding, und die fünf mit Ergreifen verbundenen Aggregate sind ein anderes?“ ",
