--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.82:5.2": "„Das kann es geben“, sagte der Buddha. ",
   "sn22.82:5.3": "„Da denkt jemand: ",
   "sn22.82:5.4": "‚Dass ich doch in der Zukunft solche Form, solches Gefühl, solche Wahrnehmung, solche Entscheidungen und solches Bewusstsein hätte!‘ ",
-  "sn22.82:5.5": "So kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben.“ "
+  "sn22.82:5.5": "So kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben.“ ",
+  "sn22.82:5.6": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: "
 }
