--- a/translation/de/sabbamitta/sutta/an/an4/an4.186_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.186_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an4.186:2.4": "Was führt die Welt an? Was zieht sie herum? Was erscheint und übernimmt die Kontrolle?“ ",
   "an4.186:2.5": "„Ja, Herr.“ ",
   "an4.186:2.6": "„Mönch, der Geist führt die Welt an. Der Geist zieht sie herum. Der Geist erscheint und übernimmt die Kontrolle.“ ",
-  "an4.186:3.1": "Mit den Worten „gut, Herr“ begrüßte der Mönch die Worte des Buddha und stimmte ihm zu. Dann stellte er eine weitere Frage: ",
+  "an4.186:3.1": "Mit den Worten „gut, Herr“ begrüßte jener Mönch die Worte des Buddha und stimmte ihm zu. Dann stellte er eine weitere Frage: ",
   "an4.186:3.2": "„Herr, man spricht über ‚jemanden, der gelehrt ist und die Lehren im Gedächtnis hat‘. ",
   "an4.186:3.3": "Wie beschreibt man jemanden, der gelehrt ist und die Lehren im Gedächtnis hat?“ ",
   "an4.186:4.1": "„Gut, gut, Mönch! ",
