--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn22.82:5.4": "‚Dass ich doch in der Zukunft solche Form, solches Gefühl, solche Wahrnehmung, solche Entscheidungen und solches Bewusstsein hätte!‘ ",
   "sn22.82:5.5": "So kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben.“ ",
   "sn22.82:5.6": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
-  "sn22.82:6.1": "„Herr, was ist die Reichweite des Begriffs ‚Aggregate‘, wie er für die Aggregate verwendet wird?“ "
+  "sn22.82:6.1": "„Herr, was ist die Reichweite des Begriffs ‚Aggregate‘, wie er für die Aggregate verwendet wird?“ ",
+  "sn22.82:6.2": "„Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Form-Aggregat. "
 }
