--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn22.82:5.6": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
   "sn22.82:6.1": "„Herr, was ist die Reichweite des Begriffs ‚Aggregate‘, wie er für die Aggregate verwendet wird?“ ",
   "sn22.82:6.2": "„Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Form-Aggregat. ",
-  "sn22.82:6.3": "Jegliche Art von Gefühl … "
+  "sn22.82:6.3": "Jegliche Art von Gefühl … ",
+  "sn22.82:6.4": "Jegliche Art von Wahrnehmung … "
 }
