--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn22.82:6.3": "Jegliche Art von Gefühl … ",
   "sn22.82:6.4": "Jegliche Art von Wahrnehmung … ",
   "sn22.82:6.5": "Jegliche Art von Entscheidungen … ",
-  "sn22.82:6.6": "Jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Bewusstseins-Aggregat. "
+  "sn22.82:6.6": "Jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Bewusstseins-Aggregat. ",
+  "sn22.82:6.7": "Das ist die Reichweite des Begriffs ‚Aggregate‘, wie er für die Aggregate verwendet wird.“ "
 }
