--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn22.82:6.7": "Das ist die Reichweite des Begriffs ‚Aggregate‘, wie er für die Aggregate verwendet wird.“ ",
   "sn22.82:6.8": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
   "sn22.82:7.1": "„Was ist der Grund, was ist die Ursache, dass das Form-Aggregat zu finden ist? ",
-  "sn22.82:7.2": "Was ist der Grund, was ist die Ursache, dass das Gefühls-Aggregat … "
+  "sn22.82:7.2": "Was ist der Grund, was ist die Ursache, dass das Gefühls-Aggregat … ",
+  "sn22.82:7.3": "das Wahrnehmungs-Aggregat … "
 }
