--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn22.82:6.8": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
   "sn22.82:7.1": "„Was ist der Grund, was ist die Ursache, dass das Form-Aggregat zu finden ist? ",
   "sn22.82:7.2": "Was ist der Grund, was ist die Ursache, dass das Gefühls-Aggregat … ",
-  "sn22.82:7.3": "das Wahrnehmungs-Aggregat … "
+  "sn22.82:7.3": "das Wahrnehmungs-Aggregat … ",
+  "sn22.82:7.4": "das Entscheidungs-Aggregat … "
 }
