--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn22.82:7.2": "Was ist der Grund, was ist die Ursache, dass das Gefühls-Aggregat … ",
   "sn22.82:7.3": "das Wahrnehmungs-Aggregat … ",
   "sn22.82:7.4": "das Entscheidungs-Aggregat … ",
-  "sn22.82:7.5": "das Bewusstseins-Aggregat zu finden ist?“ "
+  "sn22.82:7.5": "das Bewusstseins-Aggregat zu finden ist?“ ",
+  "sn22.82:7.6": "„Die vier Grundelemente sind der Grund und die Ursache, dass das Form-Aggregat zu finden ist. "
 }
