Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn22.82:7.6": "„Die vier Grundelemente sind der Grund und die Ursache, dass das Form-Aggregat zu finden ist. ",
   "sn22.82:7.7": "Berührung ist der Grund und die Ursache, dass das Gefühls-Aggregat, ",
   "sn22.82:7.8": "das Wahrnehmungs-Aggregat ",
-  "sn22.82:7.9": "und das Entscheidungs-Aggregat zu finden sind. "
+  "sn22.82:7.9": "und das Entscheidungs-Aggregat zu finden sind. ",
+  "sn22.82:7.10": "Name und Form sind der Grund, dass das Bewusstseins-Aggregat zu finden ist.“ "
 }
