--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "sn22.82:7.8": "das Wahrnehmungs-Aggregat ",
   "sn22.82:7.9": "und das Entscheidungs-Aggregat zu finden sind. ",
   "sn22.82:7.10": "Name und Form sind der Grund, dass das Bewusstseins-Aggregat zu finden ist.“ ",
-  "sn22.82:7.11": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: "
+  "sn22.82:7.11": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
+  "sn22.82:8.1": "„Aber Herr, wie kommt der Glaube an eine Persönlichkeit zustande?“ "
 }
