--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.82:7.11": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
   "sn22.82:8.1": "„Aber Herr, wie kommt der Glaube an eine Persönlichkeit zustande?“ ",
   "sn22.82:8.2": "„Da hat ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. ",
-  "sn22.82:8.3": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. "
+  "sn22.82:8.3": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
+  "sn22.82:8.4": "Er betrachtet Gefühl als das Selbst … "
 }
