--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.82:8.3": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.82:8.4": "Er betrachtet Gefühl als das Selbst … ",
   "sn22.82:8.5": "Er betrachtet Wahrnehmung als das Selbst … ",
-  "sn22.82:8.6": "Er betrachtet Entscheidungen als das Selbst … "
+  "sn22.82:8.6": "Er betrachtet Entscheidungen als das Selbst … ",
+  "sn22.82:8.7": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
