Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -49,5 +49,6 @@
   "sn22.82:8.5": "Er betrachtet Wahrnehmung als das Selbst … ",
   "sn22.82:8.6": "Er betrachtet Entscheidungen als das Selbst … ",
   "sn22.82:8.7": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
-  "sn22.82:8.8": "So kommt der Glaube an eine Persönlichkeit zustande.“ "
+  "sn22.82:8.8": "So kommt der Glaube an eine Persönlichkeit zustande.“ ",
+  "sn22.82:8.9": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: "
 }
