--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "sn22.82:8.7": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
   "sn22.82:8.8": "So kommt der Glaube an eine Persönlichkeit zustande.“ ",
   "sn22.82:8.9": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
-  "sn22.82:9.1": "„Aber Herr, wie kommt der Glaube an eine Persönlichkeit nicht zustande?“ "
+  "sn22.82:9.1": "„Aber Herr, wie kommt der Glaube an eine Persönlichkeit nicht zustande?“ ",
+  "sn22.82:9.2": "„Da hat ein gebildeter edler Schüler die Edlen gesehen und ist in der Lehre der Edlen bewandert und geübt. Er hat gute Menschen gesehen und ist in der Lehre der Guten bewandert und geübt. "
 }
