--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "sn22.82:8.9": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
   "sn22.82:9.1": "„Aber Herr, wie kommt der Glaube an eine Persönlichkeit nicht zustande?“ ",
   "sn22.82:9.2": "„Da hat ein gebildeter edler Schüler die Edlen gesehen und ist in der Lehre der Edlen bewandert und geübt. Er hat gute Menschen gesehen und ist in der Lehre der Guten bewandert und geübt. ",
-  "sn22.82:9.3": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. "
+  "sn22.82:9.3": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
+  "sn22.82:9.4": "Er betrachtet nicht Gefühl als das Selbst … "
 }
