--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "sn22.82:9.3": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.82:9.4": "Er betrachtet nicht Gefühl als das Selbst … ",
   "sn22.82:9.5": "Er betrachtet nicht Wahrnehmung als das Selbst … ",
-  "sn22.82:9.6": "Er betrachtet nicht Entscheidungen als das Selbst … "
+  "sn22.82:9.6": "Er betrachtet nicht Entscheidungen als das Selbst … ",
+  "sn22.82:9.7": "Er betrachtet nicht Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
