Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "sn22.82:9.5": "Er betrachtet nicht Wahrnehmung als das Selbst … ",
   "sn22.82:9.6": "Er betrachtet nicht Entscheidungen als das Selbst … ",
   "sn22.82:9.7": "Er betrachtet nicht Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
-  "sn22.82:9.8": "So kommt der Glaube an eine Persönlichkeit nicht zustande.“ "
+  "sn22.82:9.8": "So kommt der Glaube an eine Persönlichkeit nicht zustande.“ ",
+  "sn22.82:9.9": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: "
 }
