--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "sn22.82:9.9": "Mit den Worten „gut, Herr“ … stellte jener Mönch eine weitere Frage: ",
   "sn22.82:10.1": "„Herr, worin bestehen die vorteilhaften und nachteiligen Folgen und das Entrinnen bei der Form, ",
   "sn22.82:10.2": "beim Gefühl, ",
-  "sn22.82:10.3": "bei der Wahrnehmung, "
+  "sn22.82:10.3": "bei der Wahrnehmung, ",
+  "sn22.82:10.4": "bei Entscheidungen "
 }
