--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -63,5 +63,6 @@
   "sn22.82:10.1": "„Herr, worin bestehen die vorteilhaften und nachteiligen Folgen und das Entrinnen bei der Form, ",
   "sn22.82:10.2": "beim Gefühl, ",
   "sn22.82:10.3": "bei der Wahrnehmung, ",
-  "sn22.82:10.4": "bei Entscheidungen "
+  "sn22.82:10.4": "bei Entscheidungen ",
+  "sn22.82:10.5": "und beim Bewusstsein?“ "
 }
