--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "sn22.82:10.2": "beim Gefühl, ",
   "sn22.82:10.3": "bei der Wahrnehmung, ",
   "sn22.82:10.4": "bei Entscheidungen ",
-  "sn22.82:10.5": "und beim Bewusstsein?“ "
+  "sn22.82:10.5": "und beim Bewusstsein?“ ",
+  "sn22.82:10.6": "„In dem Glück und dem Hochgefühl, die aus Form entstehen: Darin bestehen ihre vorteilhaften Folgen. "
 }
