Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn22.82:10.4": "bei Entscheidungen ",
   "sn22.82:10.5": "und beim Bewusstsein?“ ",
   "sn22.82:10.6": "„In dem Glück und dem Hochgefühl, die aus Form entstehen: Darin bestehen ihre vorteilhaften Folgen. ",
-  "sn22.82:10.7": "Dass Form unbeständig ist, voller Leiden, dass sie zugrunde gehen muss: Darin bestehen ihre nachteiligen Folgen. "
+  "sn22.82:10.7": "Dass Form unbeständig ist, voller Leiden, dass sie zugrunde gehen muss: Darin bestehen ihre nachteiligen Folgen. ",
+  "sn22.82:10.8": "Das Sehnen und Begehren nach Form ausräumen und aufgeben: Darin besteht das Entrinnen von ihr. "
 }
