--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -69,5 +69,6 @@
   "sn22.82:10.7": "Dass Form unbeständig ist, voller Leiden, dass sie zugrunde gehen muss: Darin bestehen ihre nachteiligen Folgen. ",
   "sn22.82:10.8": "Das Sehnen und Begehren nach Form ausräumen und aufgeben: Darin besteht das Entrinnen von ihr. ",
   "sn22.82:10.9": "In dem Glück und dem Hochgefühl, die aus Gefühl entstehen … ",
-  "sn22.82:10.10": "die aus Wahrnehmung entstehen … "
+  "sn22.82:10.10": "die aus Wahrnehmung entstehen … ",
+  "sn22.82:10.11": "die aus Entscheidungen entstehen … "
 }
