--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -70,5 +70,6 @@
   "sn22.82:10.8": "Das Sehnen und Begehren nach Form ausräumen und aufgeben: Darin besteht das Entrinnen von ihr. ",
   "sn22.82:10.9": "In dem Glück und dem Hochgefühl, die aus Gefühl entstehen … ",
   "sn22.82:10.10": "die aus Wahrnehmung entstehen … ",
-  "sn22.82:10.11": "die aus Entscheidungen entstehen … "
+  "sn22.82:10.11": "die aus Entscheidungen entstehen … ",
+  "sn22.82:10.12": "die aus Bewusstsein entstehen: Darin bestehen seine vorteilhaften Folgen. "
 }
