Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -71,5 +71,6 @@
   "sn22.82:10.9": "In dem Glück und dem Hochgefühl, die aus Gefühl entstehen … ",
   "sn22.82:10.10": "die aus Wahrnehmung entstehen … ",
   "sn22.82:10.11": "die aus Entscheidungen entstehen … ",
-  "sn22.82:10.12": "die aus Bewusstsein entstehen: Darin bestehen seine vorteilhaften Folgen. "
+  "sn22.82:10.12": "die aus Bewusstsein entstehen: Darin bestehen seine vorteilhaften Folgen. ",
+  "sn22.82:10.13": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen seine nachteiligen Folgen. "
 }
