Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -73,5 +73,6 @@
   "sn22.82:10.11": "die aus Entscheidungen entstehen … ",
   "sn22.82:10.12": "die aus Bewusstsein entstehen: Darin bestehen seine vorteilhaften Folgen. ",
   "sn22.82:10.13": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen seine nachteiligen Folgen. ",
-  "sn22.82:10.14": "Das Sehnen und Begehren nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen von ihm.“ "
+  "sn22.82:10.14": "Das Sehnen und Begehren nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen von ihm.“ ",
+  "sn22.82:10.15": "Mit den Worten „gut, Herr“ begrüßte jener Mönch die Worte des Buddha und stimmte ihm zu. Dann stellte er eine weitere Frage: "
 }
