Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -80,5 +80,6 @@
   "sn22.82:11.3": "Man sieht jegliche Art von Gefühl … ",
   "sn22.82:11.4": "jegliche Art von Wahrnehmung … ",
   "sn22.82:11.5": "jegliche Art von Entscheidungen … ",
-  "sn22.82:11.6": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ "
+  "sn22.82:11.6": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
+  "sn22.82:11.7": "Auf diese Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize.“ "
 }
