Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -87,6 +87,6 @@
   "sn22.82:12.3": "Welches Selbst werden dann die Taten betreffen, die von einem Nicht-Selbst begangen wurden?“ ",
   "sn22.82:12.4": "Da erkannte der Buddha, was dieser Mönch dachte, und wandte sich an die Mönche: ",
   "sn22.82:13.1": "„Es ist möglich, dass ein törichter Mensch hier, unverständig und unwissend, mit von Verlangen beherrschtem Geist, denkt, er könne die Anleitung des Lehrers überschreiten: ",
-  "sn22.82:13.2": "„So scheint es, guter Herr, dass Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein nicht-selbst sind. ",
+  "sn22.82:13.2": "‚So scheint es, guter Herr, dass Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein nicht-selbst sind. ",
   "sn22.82:13.3": "Welches Selbst werden dann die Taten betreffen, die von einem Nicht-Selbst begangen wurden?“ "
 }
