Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -96,5 +96,6 @@
   "sn22.82:14.4": "„Ist Gefühl …“ … ",
   "sn22.82:14.5": "„Ist Wahrnehmung …“ … ",
   "sn22.82:14.6": "„Sind Entscheidungen …“ … ",
-  "sn22.82:14.7": "„Ist Bewusstsein beständig oder unbeständig?“ "
+  "sn22.82:14.7": "„Ist Bewusstsein beständig oder unbeständig?“ ",
+  "sn22.82:14.8": "„Unbeständig, Herr.“ "
 }
