Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -100,5 +100,6 @@
   "sn22.82:14.8": "„Unbeständig, Herr.“ ",
   "sn22.82:14.9": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn22.82:14.10": "„Leiden, Herr.“ ",
-  "sn22.82:14.11": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
+  "sn22.82:14.11": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
+  "sn22.82:14.12": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
 }
