Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -105,5 +105,6 @@
   "sn22.82:14.13": "„Nein, Herr.“ ",
   "sn22.82:14.14": "„Daher solltet ihr jegliche Art … sehen … ",
   "sn22.82:14.15": "Wenn er das sieht … ",
-  "sn22.82:14.16": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ "
+  "sn22.82:14.16": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
+  "sn22.82:15.1": "„Zwei über die Aggregate; genau das Gleiche; und kann es sein; "
 }
