Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -109,5 +109,6 @@
   "sn22.82:15.1": "„Zwei über die Aggregate; genau das Gleiche; und kann es sein; ",
   "sn22.82:15.2": "über den Ausdruck; und über die Ursache; ",
   "sn22.82:15.3": "zwei Fragen zur Persönlichkeit; ",
-  "sn22.82:15.4": "vorteilhafte folgen; und das mit Bewusstsein; "
+  "sn22.82:15.4": "vorteilhafte folgen; und das mit Bewusstsein; ",
+  "sn22.82:15.5": "das sind die zehn Fragen, "
 }
