Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -107,7 +107,7 @@
   "sn22.82:14.15": "Wenn er das sieht … ",
   "sn22.82:14.16": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
   "sn22.82:15.1": "„Zwei über die Aggregate; genau dasselbe; und kann es geben; ",
-  "sn22.82:15.2": "über den Ausdruck; und über die Ursache; ",
+  "sn22.82:15.2": "über den Ausdruck; und über den Grund; ",
   "sn22.82:15.3": "zwei Fragen zur Persönlichkeit; ",
   "sn22.82:15.4": "vorteilhafte folgen; und das mit Bewusstsein; ",
   "sn22.82:15.5": "das sind die zehn Fragen, ",
