Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "mn109:0.1": "Mittlere Lehrreden 109 ",
-  "mn109:0.2": "Die längere Lehrrede über die Vollmondnacht "
+  "mn109:0.2": "Die längere Lehrrede über die Vollmondnacht ",
+  "mn109:1.1": "So habe ich es gehört: "
 }
