Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "mn109:1.2": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras. ",
   "mn109:2.1": "Zu der Zeit, es war der Besinnungstag, der Vollmond am fünfzehnten Tag, saß der Buddha inmitten des Saṅgha der Mönche im Freien. ",
   "mn109:3.1": "Da erhob sich einer der Mönche von seinem Sitz, ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: ",
-  "mn109:3.2": "„Herr, ich würde den Buddha gerne über einen bestimmten Punkt befragen, wenn du die Zeit nehmen wolltest, zu antworten.“ "
+  "mn109:3.2": "„Herr, ich würde den Buddha gerne über einen bestimmten Punkt befragen, wenn du die Zeit nehmen wolltest, zu antworten.“ ",
+  "mn109:3.3": "„Nun, Mönch, nimm auf deinem Sitz Platz und frage, was du willst.“ "
 }
