Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "mn109:3.2": "„Herr, ich würde den Buddha gerne über einen bestimmten Punkt befragen, wenn du die Zeit nehmen wolltest, zu antworten.“ ",
   "mn109:3.3": "„Nun, Mönch, nimm auf deinem Sitz Platz und frage, was du willst.“ ",
   "mn109:3.4": "Jener Mönch setzte sich und sagte zum Buddha: ",
-  "mn109:4.1": "„Herr, gibt es die fünf mit Ergreifen verbundenen Aggregate: nämlich "
+  "mn109:4.1": "„Herr, gibt es die fünf mit Ergreifen verbundenen Aggregate: nämlich ",
+  "mn109:4.2": "Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein?“ "
 }
