Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "mn109:5.2": "„Diese fünf mit Ergreifen verbundenen Aggregate wurzeln im Verlangen.“ ",
   "mn109:6.1": "„Aber Herr, ist das Ergreifen genau dasselbe wie die fünf mit Ergreifen verbundenen Aggregate? Oder ist das Ergreifen ein Ding, und die fünf mit Ergreifen verbundenen Aggregate sind ein anderes?“ ",
   "mn109:6.2": "„Weder das eine noch das andere. ",
-  "mn109:6.3": "Vielmehr ist das Sehnen und Begehren nach ihnen das Ergreifen hier.“ "
+  "mn109:6.3": "Vielmehr ist das Sehnen und Begehren nach ihnen das Ergreifen hier.“ ",
+  "mn109:7.1": "„Aber Herr, kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben?“ "
 }
