Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "mn109:6.1": "„Aber Herr, ist das Ergreifen genau dasselbe wie die fünf mit Ergreifen verbundenen Aggregate? Oder ist das Ergreifen ein Ding, und die fünf mit Ergreifen verbundenen Aggregate sind ein anderes?“ ",
   "mn109:6.2": "„Weder das eine noch das andere. ",
   "mn109:6.3": "Vielmehr ist das Sehnen und Begehren nach ihnen das Ergreifen hier.“ ",
-  "mn109:7.1": "„Aber Herr, kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben?“ "
+  "mn109:7.1": "„Aber Herr, kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben?“ ",
+  "mn109:7.2": "„Das kann es geben“, sagte der Buddha. "
 }
