Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "mn109:6.3": "Vielmehr ist das Sehnen und Begehren nach ihnen das Ergreifen hier.“ ",
   "mn109:7.1": "„Aber Herr, kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben?“ ",
   "mn109:7.2": "„Das kann es geben“, sagte der Buddha. ",
-  "mn109:7.3": "„Da denkt jemand: "
+  "mn109:7.3": "„Da denkt jemand: ",
+  "mn109:7.4": "‚Dass ich doch in der Zukunft solche Form, solches Gefühl, solche Wahrnehmung, solche Entscheidungen und solches Bewusstsein hätte!‘ "
 }
