Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "mn109:7.5": "So kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben.“ ",
   "mn109:8.1": "„Herr, was ist die Reichweite des Ausdrucks ‚Aggregate‘, wie er für die Aggregate verwendet wird?“ ",
   "mn109:8.2": "„Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Form-Aggregat. ",
-  "mn109:8.3": "Jegliche Art von Gefühl … "
+  "mn109:8.3": "Jegliche Art von Gefühl … ",
+  "mn109:8.4": "Jegliche Art von Wahrnehmung … "
 }
