Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "mn109:8.7": "Das ist die Reichweite des Ausdrucks ‚Aggregate‘, wie er für die Aggregate verwendet wird.“ ",
   "mn109:9.1": "„Was ist der Grund, was ist die Ursache, dass das Form-Aggregat zu finden ist? ",
   "mn109:9.2": "Was ist der Grund, was ist die Ursache, dass das Gefühls-Aggregat … ",
-  "mn109:9.3": "das Wahrnehmungs-Aggregat … "
+  "mn109:9.3": "das Wahrnehmungs-Aggregat … ",
+  "mn109:9.4": "das Entscheidungs-Aggregat … "
 }
