Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "mn109:9.5": "das Bewusstseins-Aggregat zu finden ist?“ ",
   "mn109:9.6": "„Die vier Grundelemente sind der Grund und die Ursache, dass das Form-Aggregat zu finden ist. ",
   "mn109:9.7": "Berührung ist der Grund und die Ursache, dass das Gefühls-Aggregat, ",
-  "mn109:9.8": "das Wahrnehmungs-Aggregat "
+  "mn109:9.8": "das Wahrnehmungs-Aggregat ",
+  "mn109:9.9": "und das Entscheidungs-Aggregat zu finden sind. "
 }
